test/fail/asyncret1.as
func call3<C <: Shared>(f : shared () -> C) : C { f (); };
